<resources>
    <string name="app_name">News Application</string>
    <string name="network_setting_title">Network Settings</string>
    <string name="settings_menu_item">Settings</string>
    <string name="no_news">no news available, please reload the app or check after some time</string>
    <string name="no_internet">no Internet available, make sure to see if you\'re wifi is on or you are connected to the internet</string>

    <string name="settings_min_news_count_label">Minimum News Count</string>
    <string name="settings_min_news_count_key" translatable="false">min_news_count</string>
    <string name="settings_min_news_count_default" translatable="false">5 </string>

    <string name="settings_sections_label">Section</string>
    <string name="settings_sections_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">football</string>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>

    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>


</resources>
